--- a/CrossLog/Page de tracking Crosslog/styles/progress-tracker.css
+++ b/CrossLog/Page de tracking Crosslog/styles/progress-tracker.css
@@ -58,7 +58,28 @@
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
 }
-
+.modified.progress-marker::before {
+  content: attr(data-text);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  z-index: 20;
+  width: 24px;
+  height: 24px;
+  padding-bottom: 0px;
+  border-radius: 50%;
+  -webkit-transition: background-color, border-color;
+  transition: background-color, border-color;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
 .progress-marker::after {
   content: '';
   display: block;
