--- a/CrossLog/Page de tracking Crosslog/styles/main.css
+++ b/CrossLog/Page de tracking Crosslog/styles/main.css
@@ -218,6 +218,36 @@ img.article-image {
   z-index: 900;
 }
 
+#home-button {
+  position: fixed;
+  display: block;
+  right: 0;
+  bottom: 0;
+  margin-right: 40px;
+  margin-top: 40px;
+  z-index: 900;
+}
+
+#truck-button {
+  position: fixed;
+  display: block;
+  right: 0;
+  bottom: 0;
+  margin-right: 40px;
+  margin-bottom: 80px;
+  z-index: 900;
+}
+
+#list-button {
+  position: fixed;
+  display: block;
+  right: 0;
+  bottom: 0;
+  margin-right: 40px;
+  margin-bottom: 120px;
+  z-index: 900;
+}
+
 
 .footer-container {
   margin: 0 auto;
